@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.revision3"
        name="Revision3"
-       version="1.0.0"
+       version="1.0.2"
        provider-name="stacked">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
@@ -12,7 +12,9 @@
   </extension>
   <extension point="xbmc.addon.metadata">
     <summary>Revision3: The Best TV Shows on the Internet</summary>
+    <summary lang="hu">Revision3: A legjobb TV műsorok a neten</summary>
     <description>Revision3 is the leading television network for the internet generation. We create and produce all-original episodic community driven programs watched by a super-committed and passionate fan base. Our hyper-connected audience gets the vast majority of its entertainment, information and social connections through the internet.</description>
+    <description lang="hu">A Revision3 a vezető TV hálózat az internetes generáció számára. Közösség által generált eredeti programokat hozunk létre amiket egy nagyon elkötelezett szenvedélyes rajongói kör néz.[CR]A mi nézőközönségünk az információkat, szórakozást, közösségi kapcsolatokat az interneten keresztül kapja meg.</description>
     <platform>all</platform>
   </extension>
 </addon>
