@@ -13,14 +13,14 @@
     <string id="30010">xvid-large</string>
     <string id="30011">xvid-small</string>
     <string id="30012">Updates are available at</string>
-	<string id="30013">Current Version: </string>
-	<string id="30014">Update Version: </string>
-	<string id="30015">Downloading</string>
-	<string id="30016">Filename: </string>
-	<string id="30017">Download & Play</string>
-	<string id="30018">Stream</string>
-	<string id="30019">Exit</string>
-	<string id="30020">Check for updates</string>
-	<string id="30021">It appears there are no episodes available in the</string>
-	<string id="30022"> format. Change the quality settings.</string>
+    <string id="30013">Current Version: </string>
+    <string id="30014">Update Version: </string>
+    <string id="30015">Downloading</string>
+    <string id="30016">Filename: </string>
+    <string id="30017">Download &amp; Play</string>
+    <string id="30018">Stream</string>
+    <string id="30019">Exit</string>
+    <string id="30020">Check for updates</string>
+    <string id="30021">It appears there are no episodes available in the</string>
+    <string id="30022"> format. Change the quality settings.</string>
 </strings>
